added in fox and deer and fixed buttons

--- a/src/index.html
+++ b/src/index.html
@@ -143,9 +143,12 @@
             </div>
 
         </div>
-        <a href="https://drive.google.com/drive/folders/111pisKrV3F5KYgseSwgEfey2jJHOQPM1" download title="Download Projects" class="projectsButton">
-          Download Projects
-        </a>
+        <div>
+          <a href="https://drive.google.com/drive/folders/111pisKrV3F5KYgseSwgEfey2jJHOQPM1" download title="Download Projects" class="projectsButton">
+            Download Projects
+          </a>
+        </div>
+        
       </div>
     </section>
       
